# quest

./: .gitignore  .quests  Cargo.toml  README.md
src/: main.rs  quest.rs
