[package]
name = "quest"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.4"
envsubst = "0.2"
glob = "0.3.1"
itertools = "0.13.0"
log = "0.4.22"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
thiserror = "1.0.64"
toml = "0.8"
url = { version = "2.5", features = ["serde"] }
